force-app/main/default/objects/Flosum__Pull_Request_Reviewer__c/Flosum__Pull_Request_Reviewer__c.object-meta.xml
<CustomObject>
    <label>Peer Reviewer</label>
    <nameField>
        <displayFormat>PRR-{000000}</displayFormat>
        <label>Peer Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peer Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>