force-app/main/default/objects/Flosum__Pull_Request_Reviewer__c/fields/Flosum__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Approval_Status__c</fullName>
    <formula>TEXT( Flosum__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>