force-app/main/default/objects/Flosum__Pull_Request_Reviewer__c/fields/Flosum__Branch__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Branch__c</fullName>
    <formula>Flosum__Pull_Request__r.Flosum__Branch__r.Flosum__Branch_Name__c</formula>
    <label>Branch</label>
    <type>Text</type>
</CustomField>