force-app/main/default/objects/Flosum__Pull_Request_Reviewer__c/fields/Flosum__Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Pull_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Review</label>
    <referenceTo>Flosum__Pull_Request__c</referenceTo>
    <relationshipLabel>Peer Reviewers</relationshipLabel>
    <relationshipName>Pull_Request_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>