force-app/main/default/objects/Flosum__Pull_Request_Reviewer__c/fields/Flosum__Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Reviewer__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id , Flosum__User__r.FirstName +&apos; &apos;+ Flosum__User__r.LastName)</formula>
    <label>Reviewer</label>
    <type>Text</type>
</CustomField>