force-app/main/default/objects/Flosum__Pull_Request_Reviewer__c/fields/Flosum__User__c.field-meta.xml
<CustomField>
    <fullName>Flosum__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pull_Request_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>